--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
                 <a href="#">3407R Redemption</a>
             </div>
             <button class="menu-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+                Menu
             </button>
             <ul class="nav-links" id="nav-links">
                 <li><a href="#home">Home</a></li>
