--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
                     <div class="team-member">
                         <img src="https://via.placeholder.com/150" alt="Shravan">
                         <h4>Shravan</h4>
-                        <p>Role</p>
+                        <p>Driver</p>
                     </div>
                     <div class="team-member">
                         <img src="https://via.placeholder.com/150" alt="Preston">
                         <h4>Preston</h4>
-                        <p>Role</p>
+                        <p>Builder</p>
                     </div>
                     <div class="team-member">
                         <img src="https://via.placeholder.com/150" alt="Antoine">
                         <h4>Antoine</h4>
-                        <p>Role</p>
+                        <p>Builder</p>
                     </div>
                     <div class="team-member">
                         <img src="https://via.placeholder.com/150" alt="Brandon">
                         <h4>Brandon</h4>
-                        <p>Role</p>
+                        <p>Builder</p>
                     </div>
                     <div class="team-member">
                         <img src="https://via.placeholder.com/150" alt="Titan">
                         <h4>Titan</h4>
-                        <p>Role</p>
+                        <p>Coder</p>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <div class="robot-info">
                         <h3>Redemption - Push Back (2025-2026)</h3>
                         <p><strong>Game:</strong> VRC Push Back</p>
-                        <p>[Robot description placeholder]</p>
+                        <a href="robot-progress.html" class="btn">See robot progress</a>
                     </div>
                 </div>
             </div>
