--- a/robot-progress.html
+++ b/robot-progress.html
@@ -31,16 +31,16 @@
         <section id="progress">
             <h2>Robot Progress: Redemption - Push Back (2025-2026)</h2>
             <div class="progress-update">
-                <h3>Update Title (e.g., Drivetrain Complete)</h3>
-                <p><em>Date: [Date of Update]</em></p>
-                <img src="https://via.placeholder.com/800x600" alt="Progress photo">
-                <p>[Detailed description of the progress made. This could include information about the design process, challenges faced, and solutions implemented.]</p>
+                <h3>Drivetrain Completed & Driving</h3>
+                <p><em>Date: July 27</em></p>
+                <img src="drivetrain.png" alt="Drivetrain completed and driving">
+                <p>We finished our drivetrain that uses 6 wheels and is geared with a 36:48 gear ratio. Our drivetrain runs at an rpm of 450 and we believe it is a balanced approach that will allow for success in this game.</p>
             </div>
             <div class="progress-update">
-                <h3>Update Title (e.g., Intake Prototyping)</h3>
-                <p><em>Date: [Date of Update]</em></p>
-                <img src="https://via.placeholder.com/800x600" alt="Progress photo">
-                <p>[Detailed description of the progress made. This could include information about the design process, challenges faced, and solutions implemented.]</p>
+                <h3>First Stage Intake Finished</h3>
+                <p><em>Date: July 27, 2025</em></p>
+                <img src="intake.png" alt="First Stage Intake Finished">
+                <p>We built a flexwheel intake consisting of 5 flexwheels on a high strength axle spaced out slightly using high strength spacers. It is attached to two 10 hole L-Channels and braced over the top using a 3 wide C-Channel.</p>
             </div>
         </section>
     </main>
