--- a/robot-progress.html
+++ b/robot-progress.html
@@ -11,18 +11,18 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="main.html">3407R Redemption</a>
+                <a href="index.html">3407R Redemption</a>
             </div>
             <button class="menu-toggle" id="mobile-menu">
                 Menu
             </button>
             <ul class="nav-links" id="nav-links">
-                <li><a href="main.html#home">Home</a></li>
-                <li><a href="main.html#about">About Us</a></li>
-                <li><a href="main.html#robots">Our Robots</a></li>
-                <li><a href="main.html#competitions">Competitions</a></li>
-                <li><a href="main.html#sponsors">Sponsors</a></li>
-                <li><a href="main.html#contact">Contact</a></li>
+                <li><a href="index.html#home">Home</a></li>
+                <li><a href="index.html#about">About Us</a></li>
+                <li><a href="index.html#robots">Our Robots</a></li>
+                <li><a href="index.html#competitions">Competitions</a></li>
+                <li><a href="index.html#sponsors">Sponsors</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
