Aug1 progress update

--- a/robot-progress.html
+++ b/robot-progress.html
@@ -42,6 +42,11 @@
                 <img src="intake.png" alt="First Stage Intake Finished">
                 <p>We built a flexwheel intake consisting of 5 flexwheels on a high strength axle spaced out slightly using high strength spacers. It is attached to two 10 hole L-Channels and braced over the top using a 3 wide C-Channel.</p>
             </div>
+            <div class="progress-update">
+                <h3>Second Stage Intake Rollers Complete</h3>
+                <p><em>Date: 8/1/25</em></p>
+                <p>We have completed the rollers needed for our second stage intake. They were built using HS sprockets lined with rubber bands. Four rollers were built with 18T sprockets and one was built using 12T sprockets. Once the blocks are intakes by the first stage intake they will move up the second stage using the rollers and finally exit out of the top of the robot into goals.</p>
+            </div>
         </section>
     </main>
 
