robot progress revamp(starting it)

--- a/index.html
+++ b/index.html
@@ -71,11 +71,27 @@
             <h2>Our Robots</h2>
             <div class="robot-showcase">
                 <div class="robot-card">
-                    <img src="https://via.placeholder.com/400x300" alt="Robot 1">
+                    <img src="https://via.placeholder.com/400x300" alt="Push Back V1">
                     <div class="robot-info">
-                        <h3>Redemption - Push Back (2025-2026)</h3>
+                        <h3>Push Back V1</h3>
                         <p><strong>Game:</strong> VRC Push Back</p>
-                        <a href="robot-progress.html" class="btn">See robot progress</a>
+                        <a href="robot-progress-v1.html" class="btn">See robot progress</a>
+                    </div>
+                </div>
+                <div class="robot-card">
+                    <img src="https://via.placeholder.com/400x300" alt="Push Back V2">
+                    <div class="robot-info">
+                        <h3>Push Back V2</h3>
+                        <p><strong>Game:</strong> VRC Push Back</p>
+                        <a href="robot-progress-v2.html" class="btn">See robot progress</a>
+                    </div>
+                </div>
+                <div class="robot-card">
+                    <img src="https://via.placeholder.com/400x300" alt="Push Back V3">
+                    <div class="robot-info">
+                        <h3>Push Back V3</h3>
+                        <p><strong>Game:</strong> VRC Push Back</p>
+                        <a href="robot-progress-v3.html" class="btn">See robot progress</a>
                     </div>
                 </div>
             </div>
